# dstack-ratls-example

./: Cargo.toml  README.md
client/: Cargo.toml
client/certs/: tmp-ca.key
client/src/: main.rs
server/: Cargo.toml  Rocket.toml
server/certs/: server.crt  server.key  tmp-ca.crt
server/src/: main.rs
